<resources>
    <string name="app_name">Mangalore Carnival</string>
    <string name="loading">Loading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="app_designed_developed_by"><![CDATA[APP DESIGNED & DEVELOPED BY]]></string>
    <string name="introduction">Brace yourselves....Pantheon is back! A bigger, better and brighter edition of the biennial cultural fest. Over 50 events leave you spoilt for choice. Like, share and spread the word.</string>
    <string name="faqs">Q. Where can I register for activities?\nA. Registration will be on-spot.\n\n
        Q. How can I get updates regarding the activities?\nA. We\'ll send you a notification about any updates regarding our activities and the event. If you miss these notifications, you can also see them in the Updates screen.\n\n
        Q. How do I contact the event coordinators?\nA. There\'s a call button at the bottom-right corner of every event; click on that to call the coordinator.
    </string>

    <string name="menu_events">Today Events</string>
    <string name="menu_lucky">Lucky Draw</string>
    <string name="menu_all_events">Events</string>
    <string name="menu_stalls">Stalls</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_about_us">About us</string>


</resources>
