<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_events" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_lucky" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_all_events" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_stalls" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_partners" />



    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Shrine.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_partners" />

</merge>